--- a/dimusic/index.html
+++ b/dimusic/index.html
@@ -10,9 +10,10 @@
 
 <body >
         <div id="head">
-            <h1>Digital International Music Club station</h1>
+            <h1>Digital International Music Club Station</h1>
             <hr>
-            <img  src="777.png" class="logos" ><br>
+            <img  src="7772.png" class="logos" ><br>
+            <hr>  
         </div>
 
         <br>
@@ -27,7 +28,7 @@
 <br>
               <audio controls="controls" class="audio" preload="none" id='audiopop'>
 
-                  <source src="http://dimusic.club:8000/DIM?type=.mp3" type="audio/mpeg">
+                  <source src="http://stream1.dimusic.club:11496/live?type=.mp3" type="audio/mpeg">
                   Your browser does not support the audio element.</audio>
               <!-- END OF THE RADIO HTML5 PLAYER EMBEDDING -->
               <br>
@@ -39,7 +40,7 @@
               <!-- START OF THE RADIO HTML5 PLAYER EMBEDDING -->
               <br>
               <audio controls="controls" preload="none" id="tranceaudio">
-                  <source src="http://dimusic.club:8000/DIM2_48?type=.aac" type="audio/aac" >
+                  <source src="http://stream2.dimusic.club:8000/dim2?type=.aac" type="audio/aac" >
                   Your browser does not support the audio element.</audio>
               <!-- END OF THE RADIO HTML5 PLAYER EMBEDDING -->
 
