--- a/dimusic/index.html
+++ b/dimusic/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="small-device.css" />
     <meta charset="utf-8">
     <meta http-equiv="Cache-Control" content="max-age=3600, must-revalidate" />
-    <meta name="description" content="Оnline Radio" />
+    <meta name="description" content="Оnline Radio Free Trance Pop" />
   </head>
 
 <body >
